# elk_test

./: docker-compose.yml  pyproject.toml
apps/keke/: apps.py  setting_bulk.py
config/: settings.py  urls.py
